# djangoblog

./: .gitignore  README.md  requirements.txt  run_djangoblog.sh  setup.cfg
blog_core/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_handlers.py  yasg.py
blog_core/migrations/: 0001_initial.py  0002_alter_comment_post.py
blog_core/static/blog_core/: style.css
blog_core/static/css/: admin.css
blog_core/templates/blog_core/: add_post.html  home.html  login.html  post.html  register.html  user_page.html
blog_core/templates/layout/: base.html
djangoblog/: settings.py  urls.py
templates/admin/: base_site.html
tg_bot/: app.py  app_handlers.py  models.py
tg_bot/handlers/: authorization_handlers.py  common_handlers.py  handlers_variables.py  post_handlers.py  registration_handlers.py
tg_bot/migrations/: 0001_initial.py  0002_alter_telegrambotchat_telegram_chat_id.py
users/: admin.py  forms.py
users/migrations/: 0001_initial.py
