[metadata]
name = rss_reader
version = 5.0.0
requires-python = ">=3.9"
author = VladLapkovsky
author_email = vladlapkovsky@gmail.com
description = Pure Python command-line RSS reader.
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
platform = any


classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
include_package_data = True


[flake8]
exclude = .git,__pycache__, venv
max-line-length = 120
max-complexity = 10
extend-ignore = WPS306,RST210,RST213

[mypy]
python_version = 3.9

plugins =
  mypy_django_plugin.main


check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[mypy.plugins.django-stubs]
django_settings_module = server.settings